# cpm

./: Makefile  c-project-manager  configure.ac  core  installation.sh  main.c
data/: LICENSE.txt  Makefile  README.md
libs/: a.out  main.c  main.h  tokens.c  tokens.h
src/: Makefile  Makefile.am  Makefile.in  cpm  cpm.c  cpm.h  tokens.h
src/.deps/: cpm.Po  tokens.Po
src/data/: LICENSE.txt  main
src/headers/cpm/: cpm.h  tokens.h
test1/: LICENSE.txt  Makefile  README.md
